--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "prettier": "^2.1.2",
     "start-server-and-test": "^1.11.6",
     "ts-node": "^10.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "engines": {
     "node": "12.x"
